--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -458,7 +458,7 @@
 	text-align: center;
 }
 
-.vd_singleofficewrapper-content-services-table .negotiating_block {
+.vd_singleofficewrapper-content-services-table .meeting_block {
 	border-color: #91c73e;
 	border-style: solid;
 	border-top-width: 1px;
@@ -544,7 +544,7 @@
 	background-color: #009cdf;
 }
 
-.vd_singleofficewrapper-content-services-table .detailed_block.negotiating {
+.vd_singleofficewrapper-content-services-table .detailed_block.meeting {
 	text-align: center;
 	background-color: #91c73e;
 }
@@ -603,7 +603,7 @@
 	padding-left: 55px;
 }
 
-.service_header_content_block.negotiating {
+.service_header_content_block.meeting {
 	background-image: url('../images/svg/icon-meeting.svg');
 	background-size: 53px 32px;
     background-repeat: no-repeat;
