correct order of the service icons in the office centers list

--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -189,7 +189,7 @@
 }
 
 .vd_officelistwrapper-office-services-service {
-	float: right;
+	float: left;
     margin-left: 15px;
 	background-size: 100% 100%;
 }
