--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -338,21 +338,20 @@
 	overflow: auto;
 }
 
-.vd_singleofficewrapper-header-subtitle {
+.vd_singleofficewrapper-header h1 {
 	margin-top: 60px;
 	text-align: center;
 /* 	font-family: Lato-Black; */
-	font-size: 30px;
 	font-weight: 700;
 	color: #ffffff;
 }
 
+.vd_singleofficewrapper-header-subtitle {
+	font-size: 30px;
+}
+
 .vd_singleofficewrapper-header-name {
-/* 	font-family: Lato-Black; */
 	font-size: 60px;
-	font-weight: 700;
-	color: #ffffff;
-	text-align: center;
 	margin-top: 14px;
 }
 
@@ -418,7 +417,7 @@
 }
 
 .vd_singleofficewrapper-content-about {
-	width: 1440px;
+	width: 100%;
 	overflow: auto;
 	margin: 80px auto 0px auto;
 	padding-left: 120px;
@@ -529,7 +528,7 @@
 }
 
 .vd_singleofficewrapper-content-services {
-	width: 1440px;
+	width: 100%;
     overflow: auto;
     margin: 80px auto 0px auto;
 	padding-left: 120px;
@@ -651,6 +650,7 @@
 	font-size: 16px;
 	line-height: 1.5;
 	color: #000000;
+	width: 180px;
 }
 
 .vd_singleofficewrapper-content-services-table .g-button {
@@ -706,7 +706,7 @@
 }
 
 .vd_singleofficewrapper-content-contacts {
-	width: 1440px;
+	width: 100%;
     overflow: auto;
     margin: 100px auto 0px auto;
 }
@@ -752,7 +752,7 @@
 }
 
 .vd_singleofficewrapper-content-special {
-    width: 1440px;
+    width: 100%;
     overflow: auto;
     margin: 100px auto 0px auto;
 }
@@ -1355,6 +1355,7 @@
 	text-align: center;
 	color: #ffffff;
     line-height: 60px;
+    cursor: pointer;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element.open .vd_serviceincenter_wrapper-freeoffices-list-element-header-price .reserve {
@@ -1435,7 +1436,7 @@
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-left table tr td:nth-child(odd) {
-	width: 45%;
+	width: 40%;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-left table tr.special td {
@@ -1592,13 +1593,16 @@
 	line-height: 60px;
 	background-color: #e62e66;
 /* 	font-family: Lato-Bold; */
+	font-weight: 600;
 	font-size: 14px;
 	color: #ffffff;
+	cursor: pointer;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right button.disabled {
 	background-color: #f195b1;
 	color: #fdfdfd;
+	cursor: default;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform {
@@ -1663,6 +1667,7 @@
     background-repeat: no-repeat;
     top: 4px;
     left: 0px;
+    cursor: pointer;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-right-preview .preview:checked + span {
@@ -1935,11 +1940,13 @@
 	margin-top: 35px;
 	line-height: 60px;
 	text-align: center;
+	cursor: pointer;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-right-submit.disabled {
 	background-color: #79bbfa;
 	color: #e6f0fa;
+	cursor: default;
 }
 
 .vd_serviceincenter_wrapper-special {
