--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -2182,6 +2182,7 @@
 
 .vd_services2_list {
 	text-align: center;
+	position: relative;
 }
 
 .vd_services2_list-item {
@@ -2203,6 +2204,75 @@
 	color: #000000;
 	display: inline-block;
 	border-bottom: 1px solid #000000;
+}
+
+.vd_services2_list-item-wrapper {
+	display: none;
+    width: 910px;
+    position: absolute;
+    background-color: #f7f8f9;
+    top: 0px;
+    padding: 40px 60px 60px 60px;
+    text-align: left;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.3);
+}
+
+.vd_services2_list-item-wrapper-close {
+    background-image: url('../images/svg/cross.svg');
+    background-size: 19px 19px;
+    background-repeat: no-repeat;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	color: #b4b4cd;
+    background-position: center right;
+    width: 100px;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    cursor: pointer;	
+}
+
+.vd_services2_list-item-wrapper-title {
+	width: 100%;
+	line-height: 50px;
+    height: 45px;
+/*     font-family: Lato-Black; */
+	font-size: 20px;
+	font-weight: 700;
+	color: #000000;
+}
+
+.vd_services2_list-item-wrapper-title img {
+	float: left;
+    margin-right: 30px;
+}
+
+.vd_services2_list-item-wrapper-desc {
+	width: 100%;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #010101;
+	padding: 20px 0px;
+}
+
+.vd_services2_list-item-wrapper-sublist-item {
+	height: 50px;
+	line-height: 50px;
+/* 	font-family: Lato-Semibold; */
+	font-weight: 600;
+	font-size: 20px;
+	color: #000000;
+	float: left;
+	margin: 5px 0px;
+	background-color: #ffffff;
+	padding: 0 30px;
+    width: 100%;
+    background-image: url('../images/fake-time-icon.png');
+    background-repeat: no-repeat;
+	background-position: 755px center;
 }
 
 /* service single styles */
